<resources>
    <string name="app_name">Atithi</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="managehotel">Hotel  &amp; Room List, Set Price, Add Rooms    </string>
    <string name="manageguest">Guest List with Details    </string>
    <string name="managereq">Check Special Request &amp; make discount   </string>
    <string name="managefin">Check Account Details &amp; Verify    </string>
    <string name="manageprofile">Manage Profile </string>
    <string-array name="expenses_array">
        <item> - - Select Type - - </item>
        <item>Food</item>
        <item>Travels</item>
        <item>Others</item>
    </string-array>
</resources>
