<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.mars.myguest.Activity.AdminDashboard">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:id="@+id/managehotel"
                android:layout_marginTop="5dp"
                android:background="@color/pink">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/managehotel"
                    android:textColor="@color/white"
                    android:layout_margin="10dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="30dp"
                    android:text="Manage Hotels"
                    android:layout_centerInParent="true"
                    android:textStyle="bold"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:id="@+id/manageguest"
                android:layout_marginTop="5dp"
                android:background="@color/blue">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/manageguest"
                    android:textColor="@color/white"
                    android:layout_margin="10dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="30dp"
                    android:text="Manage Guests"
                    android:layout_centerInParent="true"
                    android:textStyle="bold"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginTop="5dp"
                android:id="@+id/managerequest"
                android:background="@color/colorAccent">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/managereq"
                    android:textColor="@color/white"
                    android:layout_margin="10dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="30dp"
                    android:text="Manage Request"
                    android:layout_centerInParent="true"
                    android:textStyle="bold"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginTop="5dp"
                android:id="@+id/manageaccounts"
                android:background="@color/colorPrimaryDark">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/managefin"
                    android:textColor="@color/white"
                    android:layout_margin="10dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="30dp"
                    android:text="Manage Accounts"
                    android:layout_centerInParent="true"
                    android:textStyle="bold"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginTop="5dp"
                android:id="@+id/manage_profile"
                android:background="@color/colorGreen">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/manageprofile"
                    android:textColor="@color/white"
                    android:layout_margin="10dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="30dp"
                    android:text="Manage Profile"
                    android:layout_centerInParent="true"
                    android:textStyle="bold"/>
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
